modify index.html, add favicons

--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/style.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="Icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Icons/favicon-16x16.png">
+    <link rel="manifest" href="Icons/site.webmanifest">
+
     <title>WeatherCheck</title>
 </head>
 <body>
-    <form action="/" method="post">
-        <input type="text" name="inputCity" placeholder="Enter your city">
-    </form>
+    <div class="container">
+        <!-- <div class="subContainer"> -->
+            <form action="/" method="post">
+                <input type="text" name="inputCity" placeholder="Enter your city" autocomplete="off">
+                <button type="submit">🔍</button>
+            </form>
+        <!-- </div> -->
+        
+    </div>
 </body>
 </html>
